feat: додано лаунчер, система готова до тестування